# pr-reviewer

./: .gitignore  CHANGELOG.md  README.md  gemini_prompt.yaml  pr_review.py  pyproject.toml
.claude/: precommit.sh  settings.json
.github/workflows/: lint.yml
